--- a/src/components/task-tracker/task-tracker.module.scss
+++ b/src/components/task-tracker/task-tracker.module.scss
@@ -1,6 +1,5 @@
 .container {
   margin: 0 auto;
-  padding: 1rem;
   margin-top: 50px;
   border-top: 1px solid #0000001a;
 }
@@ -24,8 +23,7 @@
   border-radius: 10px;
 
   .add-task {
-    border-bottom: 1px solid gray;
-    padding: 10px;
+    padding: 10px 0;
     .addTaskButton {
       margin-left: 15px;
       background-color: transparent;
@@ -33,7 +31,9 @@
       text-transform: none;
       outline: none;
       box-shadow: none;
-      border-bottom: 1px solid gray;
+    }
+    .btn {
+      border-bottom: 0.1px solid rgb(210, 210, 210);
     }
   }
 
@@ -53,6 +53,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  cursor: pointer;
 
   &.todo {
     background-color: #fac3ff;
