--- a/src/components/tasks/task-row.module.scss
+++ b/src/components/tasks/task-row.module.scss
@@ -1,11 +1,13 @@
 .taskRow {
   padding: 0.75rem;
-  border-radius: 0.5rem;
   margin-bottom: 0.5rem;
 
   &:hover {
     background-color: #f9fafb;
   }
+}
+.border {
+  border-top: 0.1px solid gray;
 }
 .container {
   margin-left: 15px;
@@ -18,6 +20,24 @@
     outline: none;
     box-shadow: none;
     width: fit-content;
+  }
+
+  .btn-group {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+  }
+  .cancel-btn {
+    color: #000000;
+  }
+  .add-btn {
+    background-color: #7b1984;
+    color: #fff;
+    border-radius: 20px;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    padding: 5px 20px;
   }
 }
 
