--- a/src/components/task-tracker/task-tracker.module.scss
+++ b/src/components/task-tracker/task-tracker.module.scss
@@ -9,6 +9,7 @@
   grid-template-columns: repeat(5, 1fr);
   gap: 1rem;
   margin-bottom: 1.5rem;
+  margin-top: 1rem;
 
   .header {
     font-weight: 700;
