made the filters functional

--- a/src/components/edit-task-modal/edit-task-modal.module.scss
+++ b/src/components/edit-task-modal/edit-task-modal.module.scss
@@ -95,7 +95,7 @@
         border: 1px solid #00000030;
         border-radius: 41px;
         padding: 10px 24px;
-        color: #090909;
+        color: #fff;
         font-weight: 600;
         font-size: 0.875rem;
         display: flex;
