--- a/src/components/task-tracker/task-tracker.module.scss
+++ b/src/components/task-tracker/task-tracker.module.scss
@@ -2,6 +2,22 @@
   margin: 0 auto;
   margin-top: 50px;
   border-top: 1px solid #0000001a;
+  .not-found {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 70vh;
+    font-size: 24px;
+    font-weight: 700;
+    color: #2f2f2f;
+    .icon {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      text-align: center;
+      width: 100%;
+    }
+  }
 }
 
 .headers {
